<resources>
    <string name="app_name">PrEazyAdmin</string>
    <string name="textViewLoading">Loading…</string>
    <string name="imageDescriptionLogo">LogoImage</string>
    <string name="buttonViewLogin">LOGIN</string>
    <string name="hintEmail">Email Id</string>
    <string name="hintPassword">Password</string>
    <string name="DashboardTextView">DASHBOARD</string>
    <string name="buttonViewLogOut">Log Out</string>
    <string name="zeroValue">0</string>
    <string name="doctorsView">Doctors</string>
    <string name="patientView">Patients</string>
    <string name="pharmacyView">Pharmacies</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="randomText"> </string>
    <string name="hyphen">-</string>
    <string name="DoctorStatistics">Doctor Statistics</string>
    <string name="DoctorList">Doctor\'s List</string>
    <string name="doctorClipart">DoctorClipart</string>
    <string name="certification_number">Certification Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_id">Email Id</string>
    <string name="prescriptionCount">No. of Prescriptions Made</string>
    <string name="patientClipart">PatientClipart</string>
    <string name="age">Age</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="allergies">Allergies</string>
    <string name="pharmacyClipart">PharmacyClipart</string>
    <string name="license_number">License Number</string>
    <string name="address">Address</string>
    <string name="log_in_picture">Log in Picture</string>
    <string name="login_to_continue">Login to continue…</string>
    <string name="showPasswordText">SHOW</string>
    <string name="PatientList">Patient\'s List</string>
    <string name="PharmacyList">Pharmacy\'s List</string>
</resources>
