<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".AdminHomeActivity">

    <TextView
        android:id="@+id/textViewDashBoard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:autoSizeMaxTextSize="75sp"
        android:autoSizeMinTextSize="65sp"
        android:autoSizeTextType="uniform"
        android:text="@string/DashboardTextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/countPieChart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/cardview_shadow_end_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewPatient" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDoctor"
        android:layout_width="110dp"
        android:layout_height="140dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewPatient"
        app:layout_constraintEnd_toStartOf="@id/cardViewPatient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardViewPatient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="12.5dp"
                android:background="@drawable/ic_doctor" />

            <TextView
                android:id="@+id/textViewDoctorCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/textViewDoctorCountView"
                android:text="@string/zeroValue"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewDoctorCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="@string/doctorsView"
                android:textAlignment="center"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPatient"
        android:layout_width="110dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDashBoard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="27.5dp"
                android:layout_marginTop="12.5dp"
                android:background="@drawable/ic_patient" />

            <TextView
                android:id="@+id/textViewPatientCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/textViewPatientCountView"
                android:text="@string/zeroValue"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewPatientCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="@string/patientView"
                android:textAlignment="center"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPharmacy"
        android:layout_width="110dp"
        android:layout_height="140dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewPatient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardViewPatient"
        app:layout_constraintTop_toTopOf="@id/cardViewPatient"
        app:layout_constraintVertical_bias="0.19999999">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_pharmacy" />

            <TextView
                android:id="@+id/textViewPharmacyCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/textViewPharmacyCountView"
                android:text="@string/zeroValue"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textViewPharmacyCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="@string/pharmacyView"
                android:textAlignment="center"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>